# opencvStudy

./: scan_result.h
OPV_SOLUTION/MACServer/: CMakeLists.txt  mac_server.cpp
OPV_SOLUTION/RPIServer/: main.cpp
QRCodeDetector(RasberryPi4)/: CMakeLists.txt  azlog.h  edge_ble.cpp  edge_ble.h  main.cpp  run.sh
exam1/: main.cpp
exam2/: CmakeLists.txt  main.cpp  start.sh
